# pixi

./: .gitignore  README.md  cspell.config.yaml  pyproject.toml
.github/config/: pixi.dict
examples/opencv/: webcam_capture.py
