[project]
name = "pixi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.1",
    "opencv-contrib-python>=4.10.0.84",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "opencv-stubs>=0.0.10",
    "pylint>=3.3.3",
    "pyright>=1.1.391",
    "types-requests>=2.32.0.20241016",
]

[tool.uv.sources]
opencv-stubs = { git = "https://github.com/joelvaneenwyk/opencv-stubs.git" }
