[project]
name = "pixi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.1",
    "opencv-contrib-python>=4.10.0.84",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mypy>=1.14.1",
    "opencv-stubs>=0.0.10",
    "pre-commit>=4.0.1",
    "pylint>=3.3.3",
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "ruff>=0.9.1",
    "types-requests>=2.32.0.20241016",
]

[tool.uv.sources]
opencv-stubs = { git = "https://github.com/joelvaneenwyk/opencv-stubs" }
